# rag-indepth

./: .env.example  main.py  product_model.py  pydantic-pr.py  pyproject.toml  rag-1.py  rag-2.py  requirements.txt  tool_llm.py
data/text/: cricket.txt
